WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103997
Web Inspector: Can't take a heap snapshot in chromium ("Uncaught ReferenceError")
https://bugs.webkit.org/show_bug.cgi?id=103997
Summary
Web Inspector: Can't take a heap snapshot in chromium ("Uncaught ReferenceErr...
Marja Hölttä
Reported
2012-12-04 07:20:58 PST
Tried this with chromium trunk build, chromium revision is
r170925
and WebKit revision is 136420. Repro steps: load a simple page, try to take a heap snapshot. This error is printed immediate: [15265:15265:1204/161033:ERROR:CONSOLE(3213)] "Uncaught ReferenceError: window is not defined", source: chrome-devtools://devtools/HeapSnapshotWorker.js (3213) ... and the dev tools UI keeps waiting forever.
Attachments
Patch
(4.63 KB, patch)
2012-12-04 09:24 PST
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2012-12-04 09:24:27 PST
Created
attachment 177498
[details]
Patch
WebKit Review Bot
Comment 2
2012-12-04 09:43:48 PST
Comment on
attachment 177498
[details]
Patch Rejecting
attachment 177498
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ripts/update-webkit line 152. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource From
http://git.chromium.org/external/Webkit
16b6329..69df7e9 HEAD -> origin/HEAD error: Ref refs/remotes/origin/master is at 69df7e90d827085e08064fe2060b71e2a596ead5 but expected 16b6329a5796e11a418c6e68e9effd8d7e1537bf ! 16b6329..69df7e9 master -> origin/master (unable to update local ref) Died at Tools/Scripts/update-webkit line 152. Full output:
http://queues.webkit.org/results/15147111
WebKit Review Bot
Comment 3
2012-12-04 11:05:34 PST
Comment on
attachment 177498
[details]
Patch Clearing flags on attachment: 177498 Committed
r136534
: <
http://trac.webkit.org/changeset/136534
>
WebKit Review Bot
Comment 4
2012-12-04 11:05:38 PST
All reviewed patches have been landed. Closing bug.
Emil A Eklund
Comment 5
2012-12-04 11:57:47 PST
This broke the css3/filters/effect-reference-hw.html test. Is the change in rendering expected?
Emil A Eklund
Comment 6
2012-12-04 11:58:05 PST
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=css3%2Ffilters%2Feffect-reference-hw.html
Yury Semikhatsky
Comment 7
2012-12-04 13:55:38 PST
(In reply to
comment #5
)
> This broke the css3/filters/effect-reference-hw.html test. Is the change in rendering expected?
The change could not affect that test, it was limited to inspector front-end which is not even loaded in case of the filter tests.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug