Web Inspector: Can't take a heap snapshot in chromium ("Uncaught ReferenceError") https://bugs.webkit.org/show_bug.cgi?id=103997

Patch by Yury Semikhatsky <yurys@chromium.org> on 2012-12-04
Reviewed by Pavel Feldman.

utilities.js used in both page and worker contexts should not access window
object as there is no one in case of workers. NonLeakingMutationObserver implementation
has moved to DOMExtension.js

* inspector/front-end/DOMExtension.js:
(NonLeakingMutationObserver.NonLeakingMutationObserver._unloadListener):
(NonLeakingMutationObserver):
(NonLeakingMutationObserver.prototype.observe):
(NonLeakingMutationObserver.prototype.disconnect):
* inspector/front-end/utilities.js:

git-svn-id: svn://svn.chromium.org/blink/trunk@136540 bbb929c8-8fbe-4397-9dbb-9b2b20218538