third_party/WebKit/Source/WebCore/css/CSSParser.cpp
@@ -1655,7 +1655,8 @@ static inline bool isComma(CSSParserValue* value)
 
 static inline bool isForwardSlashOperator(CSSParserValue* value)
 {
-    return value && value->unit == CSSParserValue::Operator && value->iValue == '/';
+    ASSERT(value);
+    return value->unit == CSSParserValue::Operator && value->iValue == '/';
 }
 
 bool CSSParser::validWidth(CSSParserValue* value)
